Support "classpath:" URLs for "resourceBase" of static servlets #96o
* clarifying the docs

--- a/bootique-jetty-docs/src/main/asciidoc/_chapters/_02_programming_jetty_apps.adoc
+++ b/bootique-jetty-docs/src/main/asciidoc/_chapters/_02_programming_jetty_apps.adoc
@@ -127,6 +127,8 @@ jetty:
   servlets:
     abc:
       params:
+        # Note that "resourceBase" follows Bootique resource URL format
+        # and hence can be a  "classpath:" URL or a filesystem path
         resourceBase: "classpath:com/example/abcdocroot"
         pathInfoOnly: true
 ----
