Docs: switch to `hugo-asciidoctorj-extension` bootique/bootique#352

--- a/bootique-jetty-docs/src/main/asciidoc/index.adoc
+++ b/bootique-jetty-docs/src/main/asciidoc/index.adoc
@@ -16,7 +16,7 @@
 // under the License.
 
 // use custom header
-:bq-header: _index/header.html
+:hugo-header: _index/header.html
 
 == Bootique Integration with Jetty
 
